# OpenBeatVR

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
include/openbeat/: application.hpp  beatsaber.hpp  cube.hpp  mine.hpp  openbeat.hpp  wall.hpp
models/: cube.blend  cube.blend1  cube.mtl
shaders/: cube_shader.frag  cube_shader.vert  mine_shader.frag  mine_shader.vert  wall_shader.frag  wall_shader.vert
src/: beatsaber.cpp  cube.cpp  main.cpp  mine.cpp  openbeat.cpp  wall.cpp
textures/: cube_arrow.xcf
